@@ -1,4 +1,7 @@
 May 2013 Neel
+* Michael Tuexen and Tristan Tenbuss have contributed IPV6 support
+  for uperf.
+May 2013 Neel
 * Multiple bug fixes contributed by Michael Tuexen
 Aug 24 neel
 * Multiple bug fixes contributed by Michael Tuexen
